test_suite/tests/ui/type-attribute/into.stderr
error: failed to parse type: into = "Option<T"
 --> $DIR/into.rs:5:16
  |
5 | #[serde(into = "Option<T")]
  |                ^^^^^^^^^^

error: aborting due to previous error

